# oi_tracker

./: .gitignore  .kite_token  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MOMENTUM_FIX.md  README.md  alerts.py  app.py  config.py  database.py  dessert_tracker.py  iv_calculator.py  kite_auth.py  kite_broker.py  kite_data.py  kite_instruments.py  logger.py  main.py  momentum_tracker.py  nse_fetcher.py  oi_analyzer.py  pa_tracker.py  pattern_tracker.py  prediction_engine.py  premium_monitor.py  pyproject.toml  scalper_agent.py  scalper_engine.py  scalper_tracker.py  scheduler.py  self_learner.py  selling_tracker.py  test_momentum_fix.py  trade_tracker.py  v_shape_detector.py
nifty-oi-tracker/backend/: Dockerfile  alembic.ini  pyproject.toml
nifty-oi-tracker/backend/alembic/: env.py
nifty-oi-tracker/backend/alembic/versions/: 836c92a9ed66_initial_tables.py  8846f36690c9_oi_snapshots_volume_columns_to_bigint.py
nifty-oi-tracker/backend/app/: main.py
nifty-oi-tracker/backend/app/api/v1/: kite.py  (+6 more)
nifty-oi-tracker/backend/app/core/: config.py  constants.py  database.py  dependencies.py  events.py
nifty-oi-tracker/backend/app/engine/: iv_calculator.py  oi_analyzer.py
nifty-oi-tracker/backend/app/models/: __init__.py  analysis.py  base.py  oi_snapshot.py  settings.py  system_log.py  trade.py
nifty-oi-tracker/backend/app/schemas/: analysis.py  common.py  events.py  market.py  trade.py
nifty-oi-tracker/backend/app/services/: __init__.py  alert_service.py  analysis_service.py  instrument_service.py  kite_auth_service.py  logging_service.py  market_data_service.py  premium_monitor_service.py  scheduler_service.py  trade_service.py
nifty-oi-tracker/backend/app/strategies/: __init__.py  base.py  dessert.py  iron_pulse.py  momentum.py  selling.py
nifty-oi-tracker/backend/scripts/: migrate_sqlite.py
nifty-oi-tracker/backend/tests/: conftest.py  factories.py
(+297 files in other folders)
