[project]
name = "oi-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "python-socketio>=5.16.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]
